authentification with breeze

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,6 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 @import '~admin-lte/plugins/fontawesome-free/css/all.min.css';
 @import '~admin-lte/dist/css/adminlte.css';
 
