--- a/resources/css/app1.css
+++ b/resources/css/app1.css
@@ -1,6 +1,6 @@
 @import '~admin-lte/plugins/fontawesome-free/css/all.min.css';
 @import '~admin-lte/dist/css/adminlte.css';
-
+/* @import '~jq-fakeloader/dist/fakeLoader.min.css'; */
 .form{
     border : 1px solid #ccc;
     box-shadow: 0 0 8px #ccc;
